syntax = "proto3";

package pb;
import "rpc_create_user.proto";
import "rpc_update_user.proto";
import "rpc_login_user.proto";
import "rpc_verify_email.proto";
option go_package = "github.com/pule1234/simple_bank/pb";

service SimpleBank {
  rpc CreateUser (CreateUserRequest) returns (CreateUserResponse) {}
  rpc LoginUser (LoginUserRequest) returns (LoginUserResponse) {}
  rpc UpdateUser (UpdateUserRequest) returns (UpdateUserResponse) {}
  rpc VerifyEmail (VerifyEmailRequest) returns (VerifyEmailResponse) {}
}